<resources>
    <string name="app_name">Webmon</string>
    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="create_entry">Create Website Entry</string>
    <string name="url">URL</string>
    <string name="save">Save</string>
    <string name="search_here">Search</string>
    <string name="update">Update</string>
    <string name="update_entry">Update Entry</string>
    <string name="enter_valid_name">Enter valid name</string>
    <string name="enter_valid_url">Enter valid url</string>
    <string name="choose_interval">Choose Interval</string>
    <string name="cancel">Cancel</string>
    <string name="monitoring_interval">Monitoring Interval</string>
    <string name="checking_every_15_mins">Checking every 15 mins</string>
    <string name="message_auto_start_reason">Your device may kill the app process, when it is in the background. Therefore, it is recommended to enable the auto start option in the settings.</string>
    <string name="enable_auto_start">Enable Auto Start</string>
    <string name="ok">OK</string>
    <string name="icon_credits">Logo Icon generated at\nhttps://www.freelogodesign.org</string>
    <string name="source_code_link" translatable="false">https://github.com/theAkito/webmon</string>
    <string name="no_apps_found">No browser found</string>
    <string name="credits">Credits</string>
    <string name="source_code">Source Code</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="visit">Visit</string>
    <string name="refresh">Refresh</string>
    <string name="not_working">%s - Not Working!</string>
    <string name="site_refreshing">Refreshing… - %s</string>
    <string name="monitor_paused">Monitoring paused - %s</string>
    <string name="monitor_resumed">Monitoring resumed - %s</string>
    <string name="confirmation">Confirmation</string>
    <string name="title_remove_entry">Remove Entry</string>
    <string name="remove_confirmation_message">Do you want to permanently remove this entry?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="support_development">Support development</string>
    <string name="support_development_link" translatable="false">Buy a Coffee for the Developer\nhttps://www.paypal.me/manimaran24</string>
    <string name="contributors_main_title">Developer</string>
    <string name="contributors_main_akito" translatable="false">Akito\nhttps://github.com/theAkito</string>
    <string name="contributors_main_manimaran" translatable="false">Manimaran\nhttps://gitlab.com/manimaran</string>
    <string name="notify_only_server_issues">Notify only on Server Issues</string>
    <string name="notify_only_server_side_issues_info">Notify only server side issues (Error Codes 5xx). Do not notify on client side errors, like internet and 4xx issues.</string>
    <string name="stop">Stop</string>
    <string name="provide_custom_monitor_values">Provide Custom Monitoring values</string>
    <string name="enter_duration">Enter duration for per execution</string>
    <string name="minute_once">Minute once</string>
    <string name="second_once">Second once</string>
    <string name="custom_monitor_process_warning">Actually this process may take more power consumption. Because this process will run continuously until you stop/close the app.</string>
    <string name="custom_monitor_agree"><![CDATA[Yes, I Agree & am aware of what this process does.]]></string>
    <string name="start">Start</string>
    <string name="custom_monitor">Custom Monitoring</string>
    <string name="show_notification">Show notification</string>
    <string name="custom_monitor_running_info">Custom Monitoring Running… \nMonitoring every %1$s\nCount : %2$s</string>
    <string name="error_read_and_agree_checkbox"><![CDATA[Read & Agree the checkbox]]></string>
    <string name="enter_valid_input">Enter valid input</string>
    <string name="check_internet">Please check your internet connection!</string>
    <string name="action_refresh_title">Refresh</string>
    <string name="title_action_add_website_entry">Add Entry</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="check_a_aaaa_dns_records">Check A/AAAA DNS Records</string>
    <string name="settings_tor">Tor Settings</string>
    <string name="title_toggle_tor">TOR / Onion Support (Requires running Orbot!)</string>
    <string name="is_onion_address">Is TOR .onion Address</string>
    <string name="is_tcp_address">Is TCP Address</string>
    <string name="is_smtp_address">Is SMTP Address</string>
    <string name="is_imap_address">Is IMAP Address</string>
    <string name="is_laissez_faire">Is fine with HTTP Codes 201, 202, 204, 401, 403</string>
    <string name="settings_advanced">Advanced Settings</string>
    <string name="text_advanced_settings_show">Show Advanced Settings</string>
    <string name="text_advanced_settings_hide">Hide Advanced Settings</string>
    <string name="text_delete_all_website_entries">Delete all Website Entries</string>
    <string name="text_delete_all_website_entry_tag_cloud">Delete all Website Entry Tags</string>
    <string name="text_add_duplicate_website_entry_url">Duplicate Website URL found</string>
    <string name="text_delete_all_website_entries_are_you_sure">Are you sure you want to delete ALL Website Entries?!</string>
    <string name="text_delete_all_website_entry_tag_cloud_are_you_sure">Are you sure you want to delete ALL Website Entry Tags?!</string>
    <string name="text_add_duplicate_website_entry_url_are_you_sure">Are you sure you want to add this Website Entry regardless?</string>
    <string name="text_delete_all_website_entries_are_you_sure_yes">Yes</string>
    <string name="text_delete_all_website_entries_are_you_sure_no">No</string>
    <string name="text_create_entry_tag_cloud_accept">Accept</string>
    <string name="text_create_entry_tag_cloud_cancel">Cancel</string>
    <string name="text_create_entry_tag_cloud_add">Add Tag</string>
    <string name="text_create_entry_tag_cloud_edit">Edit Tag</string>
    <string name="text_create_entry_tag_cloud_create">Create</string>
    <string name="text_backup_import_failure_confirmation">Okay</string>
    <string name="text_toggle_service_force_disable_warning">Please, be aware, that the Forced Background Service is restarting whenever it is killed. That means, even if you disable the service in the app, the service will keep running, because the service is forced as much as possible to never get killed. After you disabled the service in the settings, as you just did now, you need to \"Force Stop\" the app in your Android system to actually kill the service. This is all needed due to how Android works. If Android would never kill important background apps, this wouldn\'t be needed.</string>
    <string name="text_autostart_no_pacakge_found">This mobile is made by one of the manufacturers, for which the autostart feature is enabled. However, we could not find the expected package that allows setting that option. Most likely, the custom ROM this phone is running does not have this feature built in. The following phone manufacturers support an autostart option in their stock ROMs.</string>
    <string name="confirm_toggle_service_force_disable_warning">Yes, I understand.</string>
    <string name="title_toggle_refresh_on_swipe_down">Refresh on Swipe Down</string>
    <string name="backup_import">Import Backup</string>
    <string name="backup_export">Export Backup</string>
    <string name="backup_settings_share">Share Backup of Settings</string>
    <string name="btn_backup_data_share">Share Backup of Data</string>
    <string name="backup_settings_export">Export Backup of Settings</string>
    <string name="backup_settings_import">Import Backup of Settings</string>
    <string name="backup_data_export">Export Backup of Data</string>
    <string name="backup_data_import">Import Backup of Data</string>
    <string name="title_share_backup">Share Backup with…</string>
    <string name="title_share_logcat">Share App Log with…</string>
    <string name="title_toggle_replace_fab_with_menu_entry">Replace Add Button with Menu Entry</string>
    <string name="create_entry_tag_cloud_edit">+</string>
    <string name="title_about">About</string>
    <string name="greetings_pascal">Greetings</string>
    <string name="title_log">Log</string>
    <string name="log_show">Show Log</string>
    <string name="log_share">Share Log</string>
    <string name="title_toggle_service_force">Forced Background Service</string>
    <string name="title_toggle_log">Debug Log</string>
    <string name="title_toggle_swipe_refresh_trigger_distance_long">Refresh on Swipe Down with Longer Swipe Distance</string>
    <string name="title_toggle_service_force_disable_warning">Stopping Forced Background Service</string>
    <string name="title_toggle_backup_data_import_overwrite_existing">Backup Data Import: Overwrite Existing Entries</string>
    <string name="title_autostart_no_package_found">No package found!</string>
</resources>