<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ooo.akito.webmon.ui.home.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="1"
        android:title="@string/search_here"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh_title"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_backup"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="2"
        android:title="@string/backup" />
    <item
        android:id="@+id/action_restore"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="3"
        android:title="@string/restore" />
    <item
        android:id="@+id/action_custom_monitor"
        android:orderInCategory="99"
        android:title="@string/custom_monitor"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="withText" />
</menu>