<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:cornerRadius="5dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_x_normal"
        android:layout_gravity="center"
        android:padding="12dp"
        android:background="@color/colorPrimary"
        android:text="@string/provide_custom_monitor_values"/>

    <LinearLayout
        android:layout_below="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/enter_duration"
                android:singleLine="true"
                android:autofillHints="Enter duration"
                android:digits="0123456789"
                android:inputType="numberDecimal"
                android:maxLength="2" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/rgDurationType"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbDurationSec"
                android:text="@string/second_once"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbDurationMin"
                android:text="@string/minute_once"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchShowNotification"
            android:layout_marginTop="2dp"
            android:text="@string/show_notification"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="8dp"
            android:text="@string/custom_monitor_process_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkboxAgree"
            android:layout_marginTop="2dp"
            android:text="@string/custom_monitor_agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:cornerRadius="5dp"
            app:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/start"/>


    </LinearLayout>

</RelativeLayout>